--- a/website/src/main.css
+++ b/website/src/main.css
@@ -182,6 +182,7 @@ button{
     height: calc(30px + 1rem);
     margin-right: 20px;
 }
+
 @keyframes rotate {
     100% {
         transform: rotate(360deg) ;
@@ -271,8 +272,8 @@ button{
 }
 
 @media screen and (max-width: 420px) {
-    .rotate_container
-    .rotating-image{
+    .myfix2{
+
         display: none;
     }
     
