--- a/website/src/css/User/userDashBoard.css
+++ b/website/src/css/User/userDashBoard.css
@@ -81,7 +81,9 @@
     left: 25%;
     display: none;
 }
-
+.css-1ie9w8x{
+    display: none !important;
+}
 .css-bk5zgf-MuiResponsiveChart-container{
     top: -30px !important;
 }
